--- a/Master Thesis/literatura.bib
+++ b/Master Thesis/literatura.bib
@@ -102,7 +102,7 @@
 	url = {https://www.genome.gov/about-genomics/fact-sheets/Sequencing-Human-Genome-cost}
 }
 
-@article {Vaser,
+@article{Vaser,
 	author = {Vaser, Robert and {\v S}iki{\'c}, Mile},
 	title = {Raven: a de novo genome assembler for long reads},
 	elocation-id = {2020.08.07.242461},
@@ -115,7 +115,7 @@
 	journal = {bioRxiv}
 }
 
-@article{DGL,
+@proceedings{DGL,
 	doi = {10.48550/ARXIV.1909.01315},
 	url = {https://arxiv.org/abs/1909.01315},
 	author = {Wang, Minjie and Zheng, Da and Ye, Zihao and Gan, Quan and Li, Mufei and Song, Xiang and Zhou, Jinjing and Ma, Chao and Yu, Lingfan and Gai, Yu and Xiao, Tianjun and He, Tong and Karypis, George and Li, Jinyang and Zhang, Zheng},
@@ -126,7 +126,7 @@
 	copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@article{GCN,
+@proceedings{GCN,
 	doi = {10.48550/ARXIV.1609.02907},
 	url = {https://arxiv.org/abs/1609.02907},
 	author = {Kipf, Thomas N. and Welling, Max},
@@ -137,7 +137,7 @@
 	copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@article{GATv2,
+@proceedings{GATv2,
 	doi = {10.48550/ARXIV.2105.14491},
 	url = {https://arxiv.org/abs/2105.14491},
 	author = {Brody, Shaked and Alon, Uri and Yahav, Eran},
@@ -148,7 +148,7 @@
 	copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@article{GAT,
+@proceedings{GAT,
 	doi = {10.48550/ARXIV.1710.10903},
 	url = {https://arxiv.org/abs/1710.10903},
 	author = {Veličković, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Liò, Pietro and Bengio, Yoshua},
@@ -200,4 +200,87 @@
 	author = {Statistics & Data},
 	title = {Most Popular Machine Learning Libraries – 2014/2021},
 	url = {https://statisticsanddata.org/data/most-popular-machine-learning-libraries/}
+}
+
+@misc{dl_applications,
+	author = {Marina Chatterjee},
+	title = {Top 20 Applications of Deep Learning in 2022 Across Industries	},
+	year = {2022},
+	url = {https://www.mygreatlearning.com/blog/deep-learning-applications/}
+}
+
+@misc{dl_growth,
+	author = {Zion Market Research},
+	title = {Outlook on the Global Deep Learning Market Size, Share \& Growth 2022 - 2028 | Estimated to Achieve a Revenue of \$80769.6 Million With Growing at a CAGR 38.3% Report by Zion Market Research},
+	year = {2022},
+	url = {https://www.prnewswire.com/news-releases/outlook-on-the-global-deep-learning-market-size-share--growth-2022---2028--estimated-to-achieve-a-revenue-of-80769-6-million-with-growing-at-a-cagr-38-3-report-by-zion-market-research-301550212.html#:~:text=As%20per%20the%20analysis%20shared,%25%20(2022%2D2028).}
+}
+
+@book{Goodfellow-et-al-2016,
+	title={Deep Learning},
+	author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+	publisher={MIT Press},
+	note={\url{http://www.deeplearningbook.org}},
+	year={2016}
+}
+
+@article{dl_bioinformatics,
+	author = {Min, Seonwoo and Lee, Byunghan and Yoon, Sungroh},
+	title = "{Deep learning in bioinformatics}",
+	journal = {Briefings in Bioinformatics},
+	volume = {18},
+	number = {5},
+	pages = {851-869},
+	year = {2016},
+	month = {07},
+	abstract = "{In the era of big data, transformation of biomedical big data into valuable knowledge has been one of the most important challenges in bioinformatics. Deep learning has advanced rapidly since the early 2000s and now demonstrates state-of-the-art performance in various fields. Accordingly, application of deep learning in bioinformatics to gain insight from data has been emphasized in both academia and industry. Here, we review deep learning in bioinformatics, presenting examples of current research. To provide a useful and comprehensive perspective, we categorize research both by the bioinformatics domain (i.e. omics, biomedical imaging, biomedical signal processing) and deep learning architecture (i.e. deep neural networks, convolutional neural networks, recurrent neural networks, emergent architectures) and present brief descriptions of each study. Additionally, we discuss theoretical and practical issues of deep learning in bioinformatics and suggest future research directions. We believe that this review will provide valuable insights and serve as a starting point for researchers to apply deep learning approaches in their bioinformatics studies.}",
+	issn = {1467-5463},
+	doi = {10.1093/bib/bbw068},
+	url = {https://doi.org/10.1093/bib/bbw068},
+	eprint = {https://academic.oup.com/bib/article-pdf/18/5/851/25581102/bbw068.pdf},
+}
+
+@book{trudeau_2017,
+	place={La Vergne},
+	title={Introduction to graph theory},
+	publisher={Stanford},
+	author={Trudeau, Richard J.},
+	year={2017}
+}
+
+@BOOK{GRL,
+	author={Hamilton, William L.},
+	booktitle={Graph Representation Learning},
+	year={2020},
+	doi={10.2200/S01045ED1V01Y202009AIM046}
+} 
+
+@proceedings{bronstein2021geometric,
+	title={Geometric Deep Learning: Grids, Groups, Graphs, Geodesics, and Gauges}, 
+	author={Michael M. Bronstein and Joan Bruna and Taco Cohen and Petar Veličković},
+	year={2021},
+	eprint={2104.13478},
+	archivePrefix={arXiv},
+	primaryClass={cs.LG}
+}
+
+@proceedings{attention,
+	doi = {10.48550/ARXIV.1409.0473},
+	url = {https://arxiv.org/abs/1409.0473},
+	author = {Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+	keywords = {Computation and Language (cs.CL), Machine Learning (cs.LG), Neural and Evolutionary Computing (cs.NE), Machine Learning (stat.ML), FOS: Computer and information sciences, FOS: Computer and information sciences},
+	title = {Neural Machine Translation by Jointly Learning to Align and Translate},
+	publisher = {arXiv},
+	year = {2014},
+	copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{EGAT,
+	author = {Kamiński K, Ludwiczak J, Jasiński M, Bukala A, Madaj R, Szczepaniak K, Dunin-Horkawicz S},
+	title = {Rossmann-toolbox: a deep learning-based protocol for the prediction and design of cofactor specificity in Rossmann fold proteins},
+	journal = {Brief Bioinform.},
+	year = {2022},
+	doi = {10.1093/bib/bbab371},
+	PMID = {34571541},
+	PMCID = {PMC8769691}
 }
