--- a/Master Thesis/literatura.bib
+++ b/Master Thesis/literatura.bib
@@ -284,3 +284,14 @@
 	PMID = {34571541},
 	PMCID = {PMC8769691}
 }
+
+@proceedings{dropout,
+	doi = {10.48550/ARXIV.1207.0580},
+	url = {https://arxiv.org/abs/1207.0580},
+	author = {Hinton, Geoffrey E. and Srivastava, Nitish and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan R.},
+	keywords = {Neural and Evolutionary Computing (cs.NE), Computer Vision and Pattern Recognition (cs.CV), Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+	title = {Improving neural networks by preventing co-adaptation of feature detectors},
+	publisher = {arXiv},
+	year = {2012},
+	copyright = {arXiv.org perpetual, non-exclusive license}
+}
